--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <a href="https://tryhackme.com/dashboard">Link Name</a>
 
-is a link to another nifty site
+is a link of cyber security lab named as tryhackme...
 
 <H1>This is a Header</H1>
 
